# robocross-software

./: CMakeLists.txt  README.md  gz_env.sh  package.xml
config/: cloud_to_scan.yaml  gz_remapings.yaml  movement_controller.yaml  path_controller.yaml  path_mapping.yaml  robot_localization_ekf.yaml  sim.yaml  waypoint_following.yaml
launch/: gz.launch.py  gz_test.launch.py  robot_localization_ekf.launch.py  sim.launch.py  state_publisher.launch.py  test.launch.py
model/: car.sdf  car_bot.urdf.xml  robocross_trial.sdf.xml  test.sdf
rviz/: car_bot.rviz
scripts/: astar.py  cloud_to_scan.py  curves.py  data.json  local_mapping.py  m.json  mapping.py  mm.json  movement_controller.py  odometry.py  path_controller.py  path_mapping.py  pathfinder.py  pathfinding.py  pathfinding1.py  pc2scan.py  reeds_shepp.py  serial1.py  speed_test.py  test.py  test1.py  waypoint_following.py
scripts/util/: astar.py  hybrid_astar.py
src/: Grid.hpp  Map.hpp  path_mapping.cpp  pc2scan.cpp
